src/main/k8s/dev/jenkins-account.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: jenkins
