src/main/k8s/dev/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: dev
