src/main/k8s/dev/jenkins.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: dev
  name: jenkins-master
  labels:
    app: jenkins
    role: master
spec:
  selector:
    matchLabels:
      app: jenkins
      role: master
  template:
    metadata:
      labels:
        app: jenkins
        role: master
    spec:
      serviceAccountName: jenkins
      volumes:
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins-home
      containers:
      - name: jenkins-master
        image: jenkins/jenkins:2.219-alpine
        volumeMounts:
        - mountPath: "/var/jenkins_home"
          name: jenkins-home
        ports:
        - containerPort: 8080
        - containerPort: 50000
        readinessProbe:
          httpGet:
            path: /login
            port: 8080
  replicas: 1

---
kind: Service
apiVersion: v1
metadata:
  namespace: dev
  name: jenkins
  labels:
    app: jenkins
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-algorithm: "round_robin"
    service.beta.kubernetes.io/do-loadbalancer-tls-ports: "443"
    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "jenkins-dev"
    service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"
spec:
  type: LoadBalancer
  selector:
    app: jenkins
    role: master
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8080

---
kind: Service
apiVersion: v1
metadata:
  namespace: dev
  name: jenkins-tunnel
  labels:
    app: jenkins
spec:
  type: ClusterIP
  selector:
    app: jenkins
    role: master
  ports:
  - name: tunnel
    protocol: TCP
    port: 50000
    targetPort: 50000
