src/main/k8s/dev/registry.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: dev
  name: registry
  labels:
    app: registry
spec:
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      volumes:
      - name: registry
        persistentVolumeClaim:
          claimName: registry
      - name: certs
        secret:
          secretName: registry-cert
      containers:
      - name: registry
        image: registry:2.7.1
        volumeMounts:
        - mountPath: "/var/lib/registry"
          name: registry
        - mountPath: "/etc/certs"
          name: certs
        ports:
        - containerPort: 443
  replicas: 1

---
kind: Service
apiVersion: v1
metadata:
  namespace: dev
  name: registry
  labels:
    app: registry
spec:
  type: ClusterIP
  selector:
    app: registry
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
