src/main/k8s/dev/nexus.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: dev
  name: nexus
  labels:
    app: nexus
spec:
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: nexus
      - name: releases
        persistentVolumeClaim:
          claimName: nexus-releases
      containers:
      - name: nexus
        image: sonatype/nexus3:3.21.1
        volumeMounts:
        - mountPath: "/nexus-data"
          name: data
        - mountPath: "/nexus-releases"
          name: releases
        ports:
        - containerPort: 8081
        - containerPort: 5000
        resources:
          requests:
            cpu: 100m
            memory: 580Mi
          limits:
            cpu: 500m
            memory: 1300Mi
  replicas: 1

---
kind: Service
apiVersion: v1
metadata:
  namespace: dev
  name: repo
  labels:
    app: nexus
spec:
  type: ClusterIP
  selector:
    app: nexus
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8081
  - name: docker
    protocol: TCP
    port: 5000
    targetPort: 5000

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: dev
  name: repo
  labels:
    app: nexus
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "lets-encrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - repo.dev.yashkov.org
    secretName: repo-dev-yashkov-org-ingress
  rules:
  - host: repo.dev.yashkov.org
    http:
      paths:
      - path: /
        backend:
          serviceName: repo
          servicePort: 80

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: dev
  name: registry
  labels:
    app: registry
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "lets-encrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - registry.dev.yashkov.org
    secretName: registry-dev-yashkov-org-ingress
  rules:
  - host: registry.dev.yashkov.org
    http:
      paths:
      - path: /
        backend:
          serviceName: repo
          servicePort: 5000
